# nao_robot

./: .gitignore  CMakeLists.txt  README.md  README.txt  stack.xml
nao_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
nao_apps/launch/: alife.launch  behaviors.launch  footsteps.launch  nao_footsteps.launch  nao_leds.launch  nao_speech.launch  nao_walker.launch  nao_wheel.launch  tactile.launch  walker.launch
nao_apps/nodes/: nao_alife.py  nao_behaviors.py  nao_diagnostic_updater.py  nao_footsteps.py  nao_leds.py  nao_speech.py  nao_tactile.py  nao_walker.py  nao_wheel.py
nao_apps/scripts/: naoros.env  test_footsteps.py  test_joint_angles.py
nao_bringup/: CHANGELOG.rst  CMakeLists.txt  nao.launch  nao_sim.launch  package.xml
nao_bringup/config/: nao_analysers.yaml  nao_full.rviz
nao_bringup/launch/: nao.launch  nao_full.launch  nao_full_py.launch  nao_sim.launch
nao_bringup/nodes/: sonar.py
nao_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_description/launch/: display.launch  display_generated.launch  nao_desc.launch  nao_desc_generated.launch  nao_publisher.launch  nao_state_publisher.launch  nao_v3_publisher.launch  nao_v4_publisher.launch  upload_nao.launch
nao_description/scripts/: test_cam_transform.py
nao_description/src/: base_footprint.cpp
nao_description/urdf/naoV32_generated_urdf/: nao.urdf  naoGazebo.xacro  naoTransmission.xacro  nao_arms.xacro  nao_fingers.xacro  nao_robot.xacro  nao_sensors.xacro  nao_visual_collisions.xacro  naoarms.xacro  naohead.xacro  naolegs.xacro  naomaterial.xacro  naosensors.xacro  naotorso.xacro  naovisual_collisions.xacro
nao_description/urdf/naoV33_generated_urdf/: nao.urdf  naoGazebo.xacro  nao_arms.xacro  nao_fingers.xacro  nao_robot.xacro  nao_sensors.xacro  naoarms.xacro  naohead.xacro  naolegs.xacro  naosensors.xacro  naotorso.xacro
nao_description/urdf/naoV40_generated_urdf/: README.md  nao.urdf  naoGazebo.xacro  nao_arms.xacro  nao_fingers.xacro  nao_robot.xacro  nao_sensors.xacro  naoarms.xacro  naohands.xacro  naohead.xacro  naolegs.xacro  naorobot.xacro  naosensors.xacro  naotorso.xacro  naovisual_collisions.xacro
nao_description/urdf/naoV50_generated_urdf/: nao.urdf  naoGazebo.xacro  nao_arms.xacro  nao_fingers.xacro  nao_robot.xacro  nao_sensors.xacro  nao_visual_collisions.xacro  naoarms.xacro  naohead.xacro  naolegs.xacro  naosensors.xacro
nao_driver/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  nao_analyzer_plugins.xml  package.xml  setup.py
nao_driver/cmake/: FindNAOqi.cmake  cmake_modules-extras.cmake.develspace.in  cmake_modules-extras.cmake.installspace.in
nao_driver/config/: nao_bottom_640x480.yaml  nao_speech.cfg  nao_top_640x480.yaml
nao_driver/launch/: nao_camera.launch  nao_ctrl.launch  nao_driver.launch  nao_driver_2.launch  nao_driver_sim.launch  nao_footsteps.launch
nao_driver/nodes/: nao_behaviors.py  nao_camera.py  nao_controller.py  nao_diagnostic_updater.py  nao_footsteps.py  nao_leds.py  nao_logger.py  nao_sensors.py  nao_speech.py  nao_tactile.py  nao_walker.py
nao_driver/scripts/: camera_walk_pose.py  crouch.py  headscan.py  headscanTop.py  init_pose.py  iros2011_scan.py  nao_behaviors.py  nao_camera.py  nao_controller.py  nao_diagnostic_updater.py  nao_footstep_clipping.py  nao_footsteps.py  nao_leds.py  nao_scanner.py  nao_sensors.py  nao_speech.py  nao_tactile.py  nao_walker.py  scan_pose.py  scan_pose_bending.py  send_camera_info.py  start_walk_pose.py  test_footsteps.py  test_joint_angles.py
nao_driver/src/: NaoJointsAnalyzer.cpp  NaoJointsAnalyzer.h  nao_sensors_cpp.cpp
nao_driver/src/nao_ctrl/: __init__.py
nao_driver/src/nao_driver/: __init__.py  nao_driver_naoqi.py
nao_driver/src/nao_driver/util/: __init__.py
nao_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
nao_msgs/action/: Blink.action  BodyPose.action  BodyPoseWithSpeed.action  FollowPath.action  JointAnglesWithSpeed.action  JointTrajectory.action  RunBehavior.action  SetSpeechVocabulary.action  SpeechWithFeedback.action
nao_msgs/msg/: AudioBuffer.msg  Bumper.msg  FadeRGB.msg  JointAngleTrajectory.msg  JointAnglesWithSpeed.msg  MotionCommandBtn.msg  TactileTouch.msg  TorsoIMU.msg  TorsoOdometry.msg  WordRecognized.msg
nao_msgs/srv/: CmdPoseService.srv  CmdVelService.srv  GetInstalledBehaviors.srv  GetTruepose.srv  SetArmsEnabled.srv  SetTransform.srv
nao_pose/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
nao_pose/config/: basic.xap  basic_poses.yaml
nao_pose/launch/: pose_manager.launch
nao_pose/nodes/: pose_controller.py  pose_manager.py
nao_pose/scripts/: execute_pose.py
nao_pose/src/xapparser/: __init__.py  xapparser.py
nao_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
