<package>
  <name>nao_driver</name>
  <version>0.4.1</version>
  <description>
    <p>
      Driver package for the Nao robot, providing access to walking commands,
      joint angles, and sensor data (odometry, IMU, ...). The
      most-current version is compatible with the Nao API version 1.12 or newer,
      connecting to a real or simulated Nao by wrapping Aldebaran Robotics'
      NaoQI API in Python. This requires the "lib" directory of the Aldebaran
      Python SDK to be in your PYTHONPATH environment variable.

      Note that cameras drivers are provided in a separate package (nao_sensors).
    </p>
  </description>
  <author>Armin Hornung</author>
  <maintainer email="severin.lemaignan@epfl.ch">Séverin Lemaignan</maintainer>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nao_driver</url>
  <url type="bugtracker">https://github.com/ros-nao/nao_robot/issues</url>
  <url type="repository">https://github.com/ros-nao/nao_robot</url>
  
  <author>Armin Hornung</author>
  <author>Stefan Osswald</author>
  <author>Daniel Maier</author>
  <author>Miguel Sarabia</author>
  <author>Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nao_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <!--<run_depend>python-dbus</run_depend>-->
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>nao_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>humanoid_nav_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <diagnostic_aggregator plugin="${prefix}/nao_analyzer_plugins.xml" />
  </export>

</package>
