<?xml version="1.0"?>
<package>
  <name>nao_apps</name>
  <version>0.5.14</version>
  <description>Applications for NAO using the NAOqi API</description>

  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
