<package>
  <name>nao_bringup</name>
  <version>0.4.1</version>
  
  <description>
      Launch files and scripts needed to bring ROS interfaces for Nao up into a
      running state.
  </description>
  
  <maintainer email="severin.lemaignan@epfl.ch">Séverin Lemaignan</maintainer>
  <author>Séverin Lemaignan</author>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/nao_robot</url>
  <url type="bugtracker">https://github.com/ros-nao/nao_robot/issues</url>
  <url type="repository">https://github.com/ros-nao/nao_robot</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>nao_description</run_depend>
  <run_depend>nao_driver</run_depend>
  <run_depend>nao_pose</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>

</package>
