<package>
  <name>nao_pose</name>
  <version>0.2.2</version>
  <description>
      <p>
          This package contains nodes for managing Nao's poses.
    </p>
  </description>
  <maintainer email="severin.lemaignan@epfl.ch">Severin Lemaignan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nao_pose</url>
  <url type="bugtracker">https://github.com/ahornung/nao_robot/issues</url>
  <url type="repository">https://github.com/ahornung/nao_robot</url>
  <author>Armin Hornung</author>
  <author>Severin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nao_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
