<package>
  <name>nao_robot</name>
  <version>0.1.1</version>
  
  <description>
    <p>The nao_robot stack contains some useful nodes to integrated the Nao humanoid robot into ROS,  developed at the <a href="http://hrl.informatik.uni-freiburg.de/">Humanoid Robots Lab</a> at the Albert-Ludwigs-Unversitaet in Freiburg, Germany. It provides basic functionality and can be installed on the robot. It should be used with the <a href="http://www.ros.org/wiki/nao_common">nao_common stack</a> for more functionality. The <a href="http://www.ros.org/wiki/humanoid_navigation"> humanoid_navigation stack</a> contains some more general packages for humanoid/biped robots.</p>
   
    <p>File downloads and development are at GitHub: <a href="https://github.com/ahornung/nao_robot">https://github.com/ahornung/nao_robot</a>, documentation at <a href="http://www.ros.org/wiki/nao_robot">http://www.ros.org/wiki/nao_robot</a>.</p>
  </description>
  
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/nao_robot</url>
  <url type="bugtracker">https://github.com/ahornung/nao_robot/issues</url>
  <url type="repository">https://github.com/ahornung/nao_robot</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
  
  <run_depend>nao_bringup</run_depend>
  <run_depend>nao_description</run_depend>
  <run_depend>nao_driver</run_depend>
  <run_depend>nao_msgs</run_depend>
  <run_depend>nao_pose</run_depend>

</package>
