<package>
  <name>nao_robot</name>
  <version>0.4.1</version>
  
  <description>
    <p>The nao_robot metapackage contains some useful nodes to integrate the Nao humanoid robot into ROS.
    Check out the <a href="http://www.ros.org/wiki/nao_extras">nao_extras stack</a> for more functionality.
    The <a href="http://www.ros.org/wiki/humanoid_navigation"> humanoid_navigation stack</a> contains some more general packages for humanoid/biped robots.</p>
  </description>
  
  <maintainer email="severin.lemaignan@epfl.ch">Séverin Lemaignan</maintainer>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <author>Armin Hornung</author>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/nao_robot</url>
  <url type="bugtracker">https://github.com/ros-nao/nao_robot/issues</url>
  <url type="repository">https://github.com/ros-nao/nao_robot</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
  
  <run_depend>nao_bringup</run_depend>
  <run_depend>nao_description</run_depend>
  <run_depend>nao_driver</run_depend>
  <run_depend>nao_msgs</run_depend>
  <run_depend>nao_pose</run_depend>

</package>
